tests/macros/int/choices.stderr
error: option `choices` does not exist for kind `int`
 --> $DIR/choices.rs:2:33
  |
2 |     requestty::questions![Int { choices: todo!() }];
  |                                 ^^^^^^^
