tests/macros/int/choices.rs
fn main() {
    requestty::questions![Int { choices: todo!() }];
}
